--- a/css/style.css
+++ b/css/style.css
@@ -54,8 +54,8 @@ div {
     background: #ff0000;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 2px;
-    border-left: 5px;
+    border-bottom-width: 2px;
+    border-left-width: 5px;
 }
 
 /* 11. */
@@ -63,25 +63,22 @@ div {
     background-color: #0000ff;
     text-align: left;
     margin-right: 50px;
-    border-right: 5px;
-    border-top: 2px;
+    border-right-width: 5px;
+    border-top-width: 2px;
 }
 
 .blue h2, .blue p {
     color: #C4C4C4;
 }
 
-/* .blue p {
-    color: #C4C4C4;
-} */
 
 /* 12. */
 .yellow {
     background-color: #ffff00;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 2px;
-    border-left: 5px;
+    border-bottom-width: 2px;
+    border-left-width: 5px;
 }
 
 .yellow p {
@@ -93,8 +90,8 @@ div {
     background-color: #008500;
     text-align: left;
     margin-right: 50px;
-    border-right: 5px;
-    border-top: 2px;
+    border-right-width: 5px;
+    border-top-width: 2px;
 }
 
 
